# vertector-knowledge-service

./: .env.example  .gitignore  CHUNK_GENERATION_FLOW.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  README.md  check_student_isolation.py  create_lecture_notes.py  demo_multihop_queries.py  docker-compose.yml  investigate_document_search.md  manage_test_data.py  mvp_create_lecture_notes.py  pyproject.toml  requirements.txt  start.sh  test_auto_id_generation.py  test_chunk_aware_ranking.py  test_chunk_issues.py  test_natural_language_search.py  test_security_implementation.py  test_semantic_search.py  verify_chunk_topics.py
cli/: README.md  note-cli
docs/: NATS_SCHEMA_MIGRATION.md  entity_ownership_analysis.md
examples/: chunk_retrieval_example.py  retrieval_example.py
schema/: 01_constraints.cypher  02_indexes.cypher  03_nodes.cypher  04_relationships.cypher  05_sample_data.cypher  05_security_constraints.cypher
scripts/: check_class_schedule.py  fix_class_schedule_duplicates.py  fix_course_student_id.py  purge_nats_stream.py  rebuild_relationships.py  regenerate_course_embeddings.py  setup.sh  setup_indices_and_embeddings.py  verify_cs301.py
src/note_service/: __init__.py  cli.py  config.py  main.py
src/note_service/crud/: __init__.py  note_service.py
src/note_service/db/: __init__.py  connection.py
src/note_service/ingestion/: __init__.py  chunk_generator.py  data_loader.py  id_generator.py  lexical_graph_manager.py  relationships.py  tag_generator.py  topic_extractor.py
src/note_service/models/: __init__.py
src/note_service/nats_integration/: README.md  __init__.py  config.py  consumer.py  data_adapter.py  profile_client.py
src/note_service/retrieval/: README.md  __init__.py  chunk_aware_ranker.py  embedder.py  query_builder.py  (+2 more)
tests/integration/: test_comprehensive_academic_profile.py  test_data_adapter_direct.py  test_embedding_generation.py  test_nats_pipeline.py  test_nats_with_embeddings.py  test_profile_integration.py
(+3 files in other folders)
